--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
                     <th>推送Token</th>
                     <th>平台</th>
                     <th>更新時間</th>
+                    <th>公司代碼</th>
                     <th>操作</th>
                 </tr>
             </thead>
